packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/ontology/property-concept-cnp-too-large.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if a property-concept association specifying a CNP that
is too large is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:10:cs"/>
    </objecttypes>
    <concepts>
      <concept name="a" version="1" description="a" display-name-singular="a" display-name-plural="a"/>
    </concepts>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="true" multivalued="true" merge="match">
            <property-concept name="a" confidence="8" cnp="256"/>
          </property>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
